# studycafe

./: .gitignore  docker-compose.yml  manage.py  pyproject.toml
accounts/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_user_is_active.py
cafe/: models.py  serializers.py  urls.py  views.py
cafe/migrations/: 0001_initial.py  0002_initial.py  0003_remove_lockerusage_uniq_used_locker_usage_per_locker_and_more.py  0004_alter_locker_available_alter_seat_available.py  0005_remove_seatusage_check_out_at.py  0006_remove_lockerusage_uniq_used_locker_usage_per_locker_and_more.py  0007_remove_pass_order_pass_idx_pass_user_status_created_and_more.py  0008_seat_available2.py  0009_remove_seat_available2.py  0010_seat_disabled.py  0011_remove_seat_disabled.py  0012_rename_available_locker_is_active_and_more.py
cafe/services/: __init__.py  batches.py  checkins.py  checkouts.py  cleanup.py  exceptions.py  expirations.py  extensions.py  moves.py  selectors.py
common/: exception_handler.py  exceptions.py  swagger.py
config/: exception_handler.py  settings.py  urls.py
logs/: models.py  serializers.py  urls.py  views.py
logs/migrations/: 0001_initial.py  0002_alter_log_options_log_message_log_metadata_and_more.py  0003_rename_actor_user_id_log_actor_user_and_more.py  (+1 more)
logs/services/: __init__.py  actions.py  (+1 more)
payments/: models.py  serializers.py  urls.py  views.py
문서/: API_v1.3.txt  API_v1.4.txt  API_v1.5.txt  ERD_v1.3.txt  ERD_v1.4.txt  ERD_v1.5.txt  정책문서_v1.2.txt  정책문서_v1.4.txt  정책문서_v1.5.txt
(+26 files in other folders)
